--- a/templates/index.html
+++ b/templates/index.html
@@ -30,28 +30,27 @@
     </header>
 
 <nav>
-        <ul>
-            <!-- Todas as Categorias -->
-            <li>
-                <a href="categorias.html">☰ Todas as categorias</a>
-                <div class="dropdown dropdown-todas">
-                    <ul>
-                        <li><a href="masculino.html">👕 Masculino</a></li>
-                        <li><a href="feminino.html">👚 Feminino</a></li>
-                        <li><a href="infantil.html">👶 Infantil</a></li>
-                        <li><a href="acessorios.html">🕶️ Acessórios</a></li>
-                        <li><a href="calcados.html">👟 Calçados</a></li>
-                        <li><a href="esportivo.html">🏃 Esportivo</a></li>
-                    </ul>
-                </div>
-            </li>
+    <ul>
+        <!-- Todas as Categorias -->
+        <li>
+            <a href="javascript:void(0)" style="cursor: default;">☰ Todas as categorias</a>
+            <div class="dropdown dropdown-todas">
+                <ul>
+                    <li><a href="masculino.html">👕 Masculino</a></li>
+                    <li><a href="feminino.html">👚 Feminino</a></li>
+                    <li><a href="infantil.html">👶 Infantil</a></li>
+                    <li><a href="acessorios.html">🕶️ Acessórios</a></li>
+                    <li><a href="calcados.html">👟 Calçados</a></li>
+                    <li><a href="esportivo.html">🏃 Esportivo</a></li>
+                </ul>
+            </div>
+        </li>
 
               <li>
                 <a href="masculino.html">Masculino</a>
                 <div class="dropdown dropdown-masculino">
                     <ul>
-                        <li><a href="masculino.html?categoria=camisetas">👕 Camisetas</a></li>
-                        <li><a href="masculino.html?categoria=camisas">👔 Camisas</a></li>
+                        <li><a href="masculino.html?categoria=camisas">👕 Camisas</a></li>
                         <li><a href="masculino.html?categoria=calcas">👖 Calças</a></li>
                         <li><a href="masculino.html?categoria=bermudas">🩳 Bermudas</a></li>
                         <li><a href="masculino.html?categoria=blazers">🥼 Blazers</a></li>
