--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
         <div class="icons">
             <a href="lista_desejos.html">❤️ Lista de Desejos</a>
             <a href="/templates/tela_login.html">👤 Entrar</a>
-            <a href="carrinho.html">🛒 Seu Carrinho (0)</a>
+            <a href="carrinho.html" id="carrinhoLink">🛒 Seu Carrinho (0)</a>
             <nav id="menuAdmin" style="display:none">
   <a href="/templates/lista_produtos.html">Lista de Produtos</a> |
   <a href="/templates/cadastro_produtos.html">Cadastrar Produto</a>
@@ -40,7 +40,7 @@
                     <li><a href="feminino.html">👚 Feminino</a></li>
                     <li><a href="infantil.html">👶 Infantil</a></li>
                     <li><a href="acessorios.html">🕶️ Acessórios</a></li>
-                    <li><a href="calcados.html">👟 Calçados</a></li>
+                    <li><a href="ofertas.html">🔥 Ofertas</a></li> <!-- TROCADO AQUI -->
                     <li><a href="esportivo.html">🏃 Esportivo</a></li>
                 </ul>
             </div>
@@ -133,9 +133,9 @@
                 <div class="categoria-icone">🕶️</div>
                 <span>Acessórios</span>
             </a>
-            <a href="calcados.html" class="categoria-card">
-                <div class="categoria-icone">👟</div>
-                <span>Calçados</span>
+            <a href="ofertas.html" class="categoria-card"> <!-- TROCADO AQUI -->
+                <div class="categoria-icone">🔥</div>
+                <span>Ofertas</span>
             </a>
         </div>
     </section>
